channelfinder-elasticsearch/templates/service-elasticsearch.yaml
# templates/service-elasticsearch.yaml

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
