channelfinder-elasticsearch/templates/networkpolicy.yaml
# templates/networkpolicy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-channelfinderservice-to-elasticsearch
spec:
  podSelector:
    matchLabels:
      app: channelfinderservice
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: elasticsearch
      ports:
        - protocol: TCP
          port: 9200
